--- a/MenuCart(2)/STARTER-FILES/index.html
+++ b/MenuCart(2)/STARTER-FILES/index.html
@@ -22,9 +22,10 @@
           <div class="content">
             <p class="menu-item">French Fries with Ketchup</p>
             <p class="price">$2.23</p>
-            <button class="in-cart">
-              <img src="images/check.svg" alt="Check" />
-              In Cart
+            <button class="add">
+              <!--<button class="in-cart">-->
+              <!--<img src="images/check.svg" alt="Check" />-->
+              Add to Cart
             </button>
           </div>
         </li>
@@ -88,7 +89,7 @@
       <ul class="cart-summary">
 
         <!-- item 1 -->
-        <li>
+        <!-- <li>
           <div class="plate">
             <img src="images/plate__fish-sticks-fries.png" alt="Fish Sticks and Fries" class="plate" />
             <div class="quantity">1</div>
@@ -109,10 +110,10 @@
           <div class="subtotal">
             $6.34
           </div>
-        </li>
+        </li>-->
 
         <!-- item 2 -->
-        <li>
+        <!--<li>
           <div class="plate">
             <img src="images/plate__french-fries.png" alt="French Fries" class="plate" />
             <div class="quantity">2</div>
@@ -133,21 +134,24 @@
           <div class="subtotal">
             $4.46
           </div>
-        </li>
+        </li> --> 
       </ul>
 
       <div class="totals">
         <div class="line-item">
           <div class="label">Subtotal:</div>
-          <div class="amount price subtotal">$10.80</div>
+          <div class="amount price subtotal">$0.00</div>
+          <!--<div class="amount price subtotal">$10.80</div>-->
         </div>
         <div class="line-item">
           <div class="label">Tax:</div>
-          <div class="amount price tax">$1.05</div>
+          <div class="amount price tax">$0.00</div>
+          <!--<div class="amount price tax">$1.05</div>-->
         </div>
         <div class="line-item total">
           <div class="label">Total:</div>
-          <div class="amount price total">$11.85</div>
+          <div class="amount price total">$0.00</div>
+          <!--<div class="amount price total">$11.85</div>-->
         </div>
       </div>
     </div>
