--- a/Rock-Paper-Scissors(12)/winner.html
+++ b/Rock-Paper-Scissors(12)/winner.html
@@ -24,7 +24,7 @@
       play again?
     </button>
   </div>
-  <script src="winner.js"></script>
+  <script src="./winner.js"></script>
 </body>
 
 </html>
