require and import not resolving require not defined error

--- a/Weather-8/index.html
+++ b/Weather-8/index.html
@@ -4380,7 +4380,7 @@
       </defs>
     </symbol>
   </svg>
-  <script src="app.js"></script>
+  <script tyep='module' src="app.js"></script>
 </body>
 
 </html>
