Weather: fetch is finally working in browser

--- a/Weather-8/index.html
+++ b/Weather-8/index.html
@@ -4380,7 +4380,8 @@
       </defs>
     </symbol>
   </svg>
-  <script tyep='module' src="app.js"></script>
+  <script type="text/javascript" src="config.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
